# fastgl

./: README.md  README.rst  meson.build  pyproject.toml
.github/workflows/: build.yml
tests/: test_roots.py
