[build-system]
requires = ["meson-python>=0.15", "pybind11>=2.11", "build"]
build-backend = "mesonpy"

[project]
name = "fastgl"
version = "0.1.0"
description = "Python bindings for the Fast Gauss-Legendre (FastGL) algorithm"
authors = [{name = "Mathew Madhavacheril", email = "mathewsyriac@gmail.com"}]
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
     "pybind11>=2.11"
     ]


[project.urls]
Homepage = "https://github.com/msyriac/fastgl"
